manifests/service-rocketchat.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: rocketchat-web
  name: rocketchat-web
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: rocketchat-web
