manifests/ingress-rocketchat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rocketchat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dojo-kube.padok.fr
    http:
      paths:
      - backend:
          serviceName: rocketchat-web
          servicePort: 80
